# bt-keepalive

./: .gitignore  .pre-commit-config.yaml  BTKeepAlive.spec  CHANGELOG.md  LICENSE  README.md  build.ps1  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
btkeepalive/: __init__.py  __main__.py  app.py  app_log.py  config.py  device_monitor.py  icon_art.py  pulse_input.py  single_instance.py  startup.py  stream.py  tray_ui.py  updater.py  volume_input.py  win_input.py  win_pulse_dialog.py  win_tray.py  win_volume_dialog.py
btkeepalive/audio/: __init__.py  binaural.py  noise.py
installer/: BTKeepAlive.iss
scripts/: generate_icon.py
tests/: test_app.py  test_binaural.py  test_config.py  test_device_monitor.py  test_noise.py  test_pulse_dialog.py  test_single_instance.py  test_startup.py  test_stream_blocksize.py  test_stream_state.py  test_updater.py  test_version.py  test_volume_input.py
