[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-keepalive"
version = "1.2.0"
description = "Windows tray utility to keep Bluetooth headphones awake with quiet audio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]

[project.scripts]
btkeepalive = "btkeepalive.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.0.0",
    "python-semantic-release>=9.0.0",
]

[tool.setuptools.packages.find]
include = ["btkeepalive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"btkeepalive/tray_ui.py" = ["B008"]
"scripts/generate_icon.py" = ["E402"]

[tool.semantic_release]
version_variables = [
    "btkeepalive/__init__.py:_FALLBACK_VERSION",
    "installer/BTKeepAlive.iss:MyAppVersion"
]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/BTKeepAlive.exe", "dist/SHA256SUMS.txt"]
upload_to_vcs_release = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
